tests/e2e/keywords/false_is_keyword.error
Error: syntax error in story at line 1, column 7

1|    false = 1
            ^

E0041: `=` is not allowed here
